# screensaver.matrixtrails

./: .gitignore  .travis.yml  CMakeLists.txt  FindOpenGLES.cmake  FindSOIL.cmake  Jenkinsfile  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/SOIL/: CMakeLists.txt  SOIL.txt
lib/SOIL2/: CMakeLists.txt  SOIL2.c
lib/kodi/gui/gl/: GL.h  Shader.h
screensaver.matrixtrails/: addon.xml  addon.xml.in
screensaver.matrixtrails/resources/: settings.xml
screensaver.matrixtrails/resources/language/English/: strings.po
screensaver.matrixtrails/resources/language/resource.language.af_za/: strings.po
screensaver.matrixtrails/resources/language/resource.language.am_et/: strings.po
screensaver.matrixtrails/resources/language/resource.language.ar_sa/: strings.po
screensaver.matrixtrails/resources/language/resource.language.az_az/: strings.po
screensaver.matrixtrails/resources/language/resource.language.be_by/: strings.po
screensaver.matrixtrails/resources/language/resource.language.bg_bg/: strings.po
screensaver.matrixtrails/resources/language/resource.language.bs_ba/: strings.po
screensaver.matrixtrails/resources/language/resource.language.ca_es/: strings.po
screensaver.matrixtrails/resources/language/resource.language.cs_cz/: strings.po
screensaver.matrixtrails/resources/language/resource.language.cy_gb/: strings.po
screensaver.matrixtrails/resources/language/resource.language.da_dk/: strings.po
screensaver.matrixtrails/resources/language/resource.language.de_de/: strings.po
screensaver.matrixtrails/resources/language/resource.language.el_gr/: strings.po
screensaver.matrixtrails/resources/language/resource.language.en_au/: strings.po
screensaver.matrixtrails/resources/language/resource.language.en_gb/: strings.po
screensaver.matrixtrails/resources/language/resource.language.en_nz/: strings.po
screensaver.matrixtrails/resources/language/resource.language.en_us/: strings.po
screensaver.matrixtrails/resources/language/resource.language.eo/: strings.po
screensaver.matrixtrails/resources/language/resource.language.es_ar/: strings.po
screensaver.matrixtrails/resources/language/resource.language.es_es/: strings.po
screensaver.matrixtrails/resources/language/resource.language.es_mx/: strings.po
screensaver.matrixtrails/resources/language/resource.language.et_ee/: strings.po
screensaver.matrixtrails/resources/language/resource.language.eu_es/: strings.po
screensaver.matrixtrails/resources/language/resource.language.fa_af/: strings.po
screensaver.matrixtrails/resources/language/resource.language.fa_ir/: strings.po
screensaver.matrixtrails/resources/language/resource.language.fi_fi/: strings.po
screensaver.matrixtrails/resources/language/resource.language.fo_fo/: strings.po
screensaver.matrixtrails/resources/language/resource.language.fr_ca/: strings.po
screensaver.matrixtrails/resources/language/resource.language.fr_fr/: strings.po
screensaver.matrixtrails/resources/language/resource.language.gl_es/: strings.po
screensaver.matrixtrails/resources/language/resource.language.he_il/: strings.po
screensaver.matrixtrails/resources/language/resource.language.hi_in/: strings.po
screensaver.matrixtrails/resources/language/resource.language.hr_hr/: strings.po
screensaver.matrixtrails/resources/language/resource.language.hu_hu/: strings.po
screensaver.matrixtrails/resources/language/resource.language.id_id/: strings.po
screensaver.matrixtrails/resources/language/resource.language.is_is/: strings.po
screensaver.matrixtrails/resources/language/resource.language.it_it/: strings.po
screensaver.matrixtrails/resources/language/resource.language.ja_jp/: strings.po
screensaver.matrixtrails/resources/language/resource.language.ko_kr/: strings.po
screensaver.matrixtrails/resources/language/resource.language.lt_lt/: strings.po
screensaver.matrixtrails/resources/language/resource.language.lv_lv/: strings.po
screensaver.matrixtrails/resources/language/resource.language.mi/: strings.po
screensaver.matrixtrails/resources/language/resource.language.mk_mk/: strings.po
screensaver.matrixtrails/resources/language/resource.language.ms_my/: strings.po
screensaver.matrixtrails/resources/language/resource.language.mt_mt/: strings.po
screensaver.matrixtrails/resources/language/resource.language.my_mm/: strings.po
screensaver.matrixtrails/resources/language/resource.language.nb_no/: strings.po
screensaver.matrixtrails/resources/language/resource.language.nl_nl/: strings.po
screensaver.matrixtrails/resources/language/resource.language.pl_pl/: strings.po
screensaver.matrixtrails/resources/language/resource.language.pt_br/: strings.po
screensaver.matrixtrails/resources/language/resource.language.pt_pt/: strings.po
screensaver.matrixtrails/resources/language/resource.language.ro_ro/: strings.po
screensaver.matrixtrails/resources/language/resource.language.ru_ru/: strings.po
screensaver.matrixtrails/resources/language/resource.language.sk_sk/: strings.po
screensaver.matrixtrails/resources/language/resource.language.sl_si/: strings.po
screensaver.matrixtrails/resources/language/resource.language.sq_al/: strings.po
screensaver.matrixtrails/resources/language/resource.language.sr_rs/: strings.po
screensaver.matrixtrails/resources/shaders/: frag.glsl  vert.glsl
src/: Texture.h  column.cpp  column.h  main.cpp  main.h  matrixtrails.cpp  matrixtrails.h  timer.h  types.h
src/shaders/: GUIShader.cpp  GUIShader.h  Matrix.cpp  Matrix.h  Shader.cpp  Shader.h
(+15 files in other folders)
